# src/main/kotlin/com/basicsteps/multipos/event_bus_channels/ConfigHandlerChannel.kt
@@ -140,7 +140,15 @@ enum class ConfigHandlerChannel(val channel: String) {
     //Inventory
     CHANGE_PRODUCT_COUNT_INVENTORY("CHANGE_PRODUCT_COUNT_INVENTORY"),
 
+    //Exchange
+    EXCHANGE_CREATE("EXCHANGE_CREATE"),
+    EXCHANGE_UPDATE("EXCHANGE_UPDATE"),
+    EXCHANGE_LIST("EXCHANGE_LIST"),
+    EXCHANGE_GET("EXCHANGE_GET"),
+    EXCHANGE_DELETE("EXCHANGE_DELETE")
     ;
+
+
 
 
 
